[package]
name = "bpns-sdk"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Push Notification Service SDK"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"
homepage = "https://github.com/bpns-org/bpns-rust-sdk"
repository = "https://github.com/bpns-org/bpns-rust-sdk"
keywords = ["bitcoin", "push notification", "notifications", "bpns", "sdk"]

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

[dev-dependencies]
tokio = { version =  "1.14.0", features = ["full"] }
